--- a/.docker/Dockerfile.base
+++ b/.docker/Dockerfile.base
@@ -12,8 +12,17 @@ ARG DEBIAN_FRONTEND=noninteractive
 # Updates the image and installs necessary packages
 RUN apt-get update --fix-missing \
     && apt-get install -y curl wget jq sudo gosu git build-essential \
-    locales locales-all fontconfig fonts-nanum \
-    tzdata openssh-server \
+    software-properties-common locales locales-all fontconfig fonts-nanum \
+    tzdata openssh-server
+# Install ROS2
+RUN add-apt-repository universe
+RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
+RUN apt update
+RUN apt-get install -y ros-foxy-desktop python3-argcomplete ros-foxy-ros-base python3-argcomplete \
+        ros-dev-tools libpoco-dev ros-foxy-control-msgs ros-foxy-realtime-tools \
+        ros-foxy-xacro ros-foxy-joint-state-publisher-gui ros-foxy-object-recognition-msgs \
+        ros-foxy-octomap-msgs ros-foxy-gazebo-ros ros-foxy-gazebo-ros-pkgs ros-foxy-control-toolbox \
     # Cleans up unnecessary packages to reduce image size
     && apt-get autoremove -y \
     && apt-get clean -y
@@ -39,9 +48,6 @@ RUN mkdir -p $WORKSPACE_ROOT/projects
 
 # Sets the working directory to workspace root
 WORKDIR $WORKSPACE_ROOT
-# Copies scripts from host into the image
-COPY ./.docker/scripts/ ./scripts/
-# RUN pip install -r ./scripts/requirements-base.txt
 
 # Sets the time zone within the container
 ENV TZ="Asia/Seoul"
@@ -89,13 +95,32 @@ ENV DOTFILES_USE_PYTHON_TOOLS=1
 ENV REMOTE_CONTAINERS=1
 # ENV DOTFILES_DEBUG=1
 
-USER $USERNAME
 RUN sh -c "$(wget -qO- https://dotfiles.entelecheia.ai/install)"
 
 USER root
 RUN chown --recursive "${USER_UID}:${USER_GID}" "${WORKSPACE_ROOT}"
 RUN chown --recursive "${USER_UID}:${USER_GID}" "${APP_INSTALL_ROOT}"
+
+# Install doosan-robotics packages for ROS2
+# ### We assume that you have installed the ros-foxy-desktop package using the apt-get command.
+# ### We recommand the /home/<user_home>/ros2_ws/src
 USER $USERNAME
 
+RUN mkdir -p ~/ros2_ws/src
+RUN cd ~/ros2_ws/src \
+    && git clone https://github.com/doosan-robotics/doosan-robot2.git \
+    && git clone https://github.com/ros-controls/ros2_control.git \
+    && git clone https://github.com/ros-controls/ros2_controllers.git \
+    && git clone https://github.com/ros-simulation/gazebo_ros2_control.git \
+    && cd ros2_control && git reset --hard 3dc62e28e3bc8cf636275825526c11d13b554bb6 && cd .. \
+    && cd ros2_controllers && git reset --hard 83c494f460f1c8675f4fdd6fb8707b87e81cb197 && cd .. \
+    && cd gazebo_ros2_control && git reset --hard 3dfe04d412d5be4540752e9c1165ccf25d7c51fb && cd .. \
+    && git clone -b ros2 --single-branch https://github.com/ros-planning/moveit_msgs 
+
+    # Copies scripts from host into the image
+COPY ./.docker/scripts/ ./scripts/
+# RUN pip install -r ./scripts/requirements-base.txt
+RUN bash ${WORKSPACE_ROOT}/scripts/ros2_ws_build.sh
+
 # Specifies the command that will be executed when the container is run
-CMD ["bash"]
+CMD ["zsh"]
