--- a/.docker/docker.common.env
+++ b/.docker/docker.common.env
@@ -3,7 +3,7 @@
 # Change the variables below to your need:              #
 #########################################################
 APP_INSTALL_ROOT=${ROS2_INSTALL_ROOT:-"/opt"} # The directory in the container where the project will be installed or cloned
-APP_DIRNAME=${ROS2_DIRNAME:-"entelecheia"}                # The directory name for the cloned project
+APP_DIRNAME=${ROS2_DIRNAME:-"ros"}                # The directory name for the cloned project
 APP_SRC_DIR=${APP_INSTALL_ROOT}/${APP_DIRNAME}
 APP_VIRTUAL_ENV=${APP_INSTALL_ROOT}/.venvs/${APP_DIRNAME}
 APP_WORKSPACE_ROOT=${APP_INSTALL_ROOT}/workspace
