--- a/.copier-docker-config.yaml
+++ b/.copier-docker-config.yaml
@@ -10,7 +10,7 @@ container_workspace_root: /workspace
 copy_scripts_dir: true
 cuda_device_id: all
 docker_apt_packages: fontconfig fonts-nanum
-docker_build_from: library/ubuntu:20.04
+docker_build_from: ghcr.io/entelecheia/devcon:latest-ubuntu-20.04
 docker_container_uid: 9001
 docker_container_username: app
 docker_image_variant_name: base
