--- a/.copier-docker-config.yaml
+++ b/.copier-docker-config.yaml
@@ -1,7 +1,7 @@
 # Changes here will be overwritten by Copier; do NOT edit manually
 _commit: v0.29.9
 _src_path: gh:entelecheia/hyperfast-docker-template
-app_dirname: entelecheia
+app_dirname: ros
 app_install_root: /opt
 author: Young Joon Lee
 build_images_from_dockerfile: true
@@ -31,7 +31,7 @@ install_dotfiles: true
 jupyter_host_port: 18998
 jupyter_port: 8585
 jupyter_token: __juypter_token_(change_me)__
-launch_scripts: launch.sh
+launch_scripts: launch-ros2.sh
 main_branch: main
 project_description: ROS2 Container is a Docker container for ROS2 development and
     deployment.
