--- a/.docker/docker.foxy.env
+++ b/.docker/docker.foxy.env
@@ -17,7 +17,7 @@ IMAGE_NAME="${CONTAINER_REGISTRY}/${DOCKER_USERNAME}/${DOCKER_PROJECT_NAME}" # T
 BUILD_FROM="ghcr.io/entelecheia/devcon:latest-ubuntu-20.04"                                       # The base image for the Docker build
 
 # docker run: Configuration parameters for running the Docker container
-CONTAINER_LAUNCH_SCRIPT="${CONTAINER_WORKSPACE_ROOT}/scripts/launch.sh"              # The name of the launch script
+CONTAINER_LAUNCH_SCRIPT="${CONTAINER_WORKSPACE_ROOT}/scripts/launch-ros2.sh"              # The name of the launch script
 CONTAINER_CUDA_DEVICE_ID=${ROS2_CUDA_DEVICE_ID:-"all"}   # The ID of the CUDA device to use, e.g. all, 0, 1, 2, etc.
 CONTAINER_SSH_PORT=${SSH_PORT:-"22"}                                                # The SSH port in the Docker container
 HOST_SSH_PORT=${ROS2_HOST_SSH_PORT:-"2929"}                # The SSH port on the host machine to be mapped to the container's SSH port
