--- a/.docker/Dockerfile.foxy
+++ b/.docker/Dockerfile.foxy
@@ -53,6 +53,23 @@ ENV USERNAME $ARG_USERNAME
 ENV USER_UID $ARG_USER_UID
 ENV USER_GID $ARG_USER_GID
 
+# Creates a non-root user with sudo privileges
+# check if user exists and if not, create user
+RUN if id -u $USERNAME >/dev/null 2>&1; then \
+        # if the current user's user id is different from the specified user id, change the user id of the current user to the specified user id
+        if [ "$USER_UID" -ne "$(id -u $USERNAME)" ]; then \
+            usermod --uid $USER_UID $USERNAME; \
+        fi; \
+    else \
+        groupadd --gid $USER_GID $USERNAME && \
+        adduser --uid $USER_UID --gid $USER_GID --force-badname --disabled-password --gecos "" $USERNAME && \
+        echo "$USERNAME:$USERNAME" | chpasswd && \
+        adduser $USERNAME sudo && \
+        echo "$USERNAME ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers && \
+        echo "$USERNAME ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/$USERNAME && \
+        chmod 0440 /etc/sudoers.d/$USERNAME; \
+    fi
+
 # Switches to the newly created user
 USER $USERNAME
 
