fix(docker-compose): add DISPLAY environment variable

--- a/.docker/docker-compose.foxy.yaml
+++ b/.docker/docker-compose.foxy.yaml
@@ -46,6 +46,7 @@ services:
       IMAGE_VARIANT: $IMAGE_VARIANT
       JUPYTER_PORT: $CONTAINER_JUPYTER_PORT
       JUPYTER_TOKEN: $CONTAINER_JUPYTER_TOKEN
+      DISPLAY: $DISPLAY
     ulimits:
       # Sets the stack size and memory lock limits
       stack: 67108864
