--- a/.docker/Dockerfile.foxy-dsr
+++ b/.docker/Dockerfile.foxy-dsr
@@ -1,5 +1,5 @@
 # Sets the base image for subsequent instructions
-ARG ARG_BUILD_FROM="ghcr.io/entelecheia/devcon:latest-ubuntu-20.04"
+ARG ARG_BUILD_FROM="ghcr.io/entelecheia/ros2:latest-foxy"
 FROM $ARG_BUILD_FROM AS builder
 
 # Sets labels for the image
@@ -7,30 +7,9 @@ LABEL org.opencontainers.image.source="https://github.com/entelecheia/ros2-conta
 LABEL org.opencontainers.image.description="ROS2 Container for development and deployment"
 LABEL org.opencontainers.image.licenses="MIT"
 
-USER root
-# Setting this argument prevents interactive prompts during the build process
-ARG DEBIAN_FRONTEND=noninteractive
-# Updates the image and installs necessary packages
-RUN add-apt-repository universe
-RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
-RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
-RUN apt update --fix-missing \
-    && apt-get install -y ros-foxy-desktop python3-argcomplete ros-foxy-ros-base python3-argcomplete \
-        ros-dev-tools libpoco-dev ros-foxy-control-msgs ros-foxy-realtime-tools \
-        ros-foxy-xacro ros-foxy-joint-state-publisher-gui ros-foxy-object-recognition-msgs \
-        ros-foxy-octomap-msgs ros-foxy-gazebo-ros ros-foxy-gazebo-ros-pkgs ros-foxy-control-toolbox \
-    # Cleans up unnecessary packages to reduce image size
-    && apt-get autoremove -y \
-    && apt-get clean -y
-
-# Sets Python environment variables
-ENV PIP_DEFAULT_TIMEOUT 100
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
 # Setting ARGs and ENVs for the app
 ARG ARG_APP_INSTALL_ROOT="/opt"
-ARG ARG_APP_DIRNAME="ros"
+ARG ARG_APP_DIRNAME="ros_ws"
 ENV APP_INSTALL_ROOT $ARG_APP_INSTALL_ROOT
 ENV APP_DIRNAME $ARG_APP_DIRNAME
 ENV APP_SRC_DIR=${APP_INSTALL_ROOT}/${APP_DIRNAME}
@@ -50,6 +29,7 @@ ENV USERNAME $ARG_USERNAME
 ENV USER_UID $ARG_USER_UID
 ENV USER_GID $ARG_USER_GID
 
+USER root
 # Creates a non-root user with sudo privileges
 # check if user exists and if not, create user
 RUN if id -u $USERNAME >/dev/null 2>&1; then \
@@ -67,14 +47,29 @@ RUN if id -u $USERNAME >/dev/null 2>&1; then \
         chmod 0440 /etc/sudoers.d/$USERNAME; \
     fi
 
-# Switches to the newly created user
+# if the user id is different from the specified user id, change the owner of the workspace to the specified user id
+RUN if [ "$USER_UID" -ne "$(id -u $USERNAME)" ]; then \
+        chown --recursive $USER_UID:$USER_UID $WORKSPACE_ROOT; \
+        chown --recursive $USER_UID:$USER_UID $APP_INSTALL_ROOT; \
+    fi
 USER $USERNAME
+
+RUN mkdir -p "$APP_SRC_DIR/src"
+RUN cd "$APP_SRC_DIR/src" \
+    && git clone https://github.com/doosan-robotics/doosan-robot2.git \
+    && git clone https://github.com/ros-controls/ros2_control.git \
+    && git clone https://github.com/ros-controls/ros2_controllers.git \
+    && git clone https://github.com/ros-simulation/gazebo_ros2_control.git \
+    && cd ros2_control && git reset --hard 3dc62e28e3bc8cf636275825526c11d13b554bb6 && cd .. \
+    && cd ros2_controllers && git reset --hard 83c494f460f1c8675f4fdd6fb8707b87e81cb197 && cd .. \
+    && cd gazebo_ros2_control && git reset --hard 3dfe04d412d5be4540752e9c1165ccf25d7c51fb && cd .. \
+    && git clone -b ros2 --single-branch https://github.com/ros-planning/moveit_msgs
 
 # Copies scripts from host into the image
 COPY ./.docker/scripts /home/$USERNAME/scripts/
-
-# Add the ROS2 setup.bash to the bashrc
-RUN echo "source /opt/ros/foxy/setup.bash" >> ~/.bashrc
+# RUN pip install -r ./scripts/requirements-base.txt
+RUN bash "/home/$USERNAME/scripts/scripts/ros2_ws_build.sh"
+RUN echo "source $APP_SRC_DIR/install/setup.bash" >> ~/.bashrc
 
 # Specifies the command that will be executed when the container is run
 CMD ["bash"]
