--- a/.docker/Dockerfile.foxy-dsr
+++ b/.docker/Dockerfile.foxy-dsr
@@ -47,14 +47,13 @@ RUN if id -u $USERNAME >/dev/null 2>&1; then \
         chmod 0440 /etc/sudoers.d/$USERNAME; \
     fi
 
-# if the user id is different from the specified user id, change the owner of the workspace to the specified user id
-RUN if [ "$USER_UID" -ne "$(id -u $USERNAME)" ]; then \
-        chown --recursive $USER_UID:$USER_UID $WORKSPACE_ROOT; \
-        chown --recursive $USER_UID:$USER_UID $APP_INSTALL_ROOT; \
-    fi
-USER $USERNAME
-
 RUN mkdir -p "$APP_SRC_DIR/src"
+
+# change the owner of the workspace to the specified user id
+RUN chown --recursive $USER_UID:$USER_UID $WORKSPACE_ROOT
+RUN chown --recursive $USER_UID:$USER_UID $APP_INSTALL_ROOT
+
+USER $USERNAME
 RUN cd "$APP_SRC_DIR/src" \
     && git clone https://github.com/doosan-robotics/doosan-robot2.git \
     && git clone https://github.com/ros-controls/ros2_control.git \
@@ -68,7 +67,7 @@ RUN cd "$APP_SRC_DIR/src" \
 # Copies scripts from host into the image
 COPY ./.docker/scripts /home/$USERNAME/scripts/
 # RUN pip install -r ./scripts/requirements-base.txt
-RUN bash "/home/$USERNAME/scripts/scripts/ros2_ws_build.sh"
+RUN bash "/home/$USERNAME/scripts/ros2_ws_build.sh"
 RUN echo "source $APP_SRC_DIR/install/setup.bash" >> ~/.bashrc
 
 # Specifies the command that will be executed when the container is run
