--- a/.docker/docker-compose.foxy-dsr.yaml
+++ b/.docker/docker-compose.foxy-dsr.yaml
@@ -46,6 +46,7 @@ services:
       IMAGE_VARIANT: $IMAGE_VARIANT
       JUPYTER_PORT: $CONTAINER_JUPYTER_PORT
       JUPYTER_TOKEN: $CONTAINER_JUPYTER_TOKEN
+      DISPLAY: $DISPLAY
     ulimits:
       # Sets the stack size and memory lock limits
       stack: 67108864
@@ -66,6 +67,7 @@ services:
       - "$HOST_SSH_DIR:$CONTAINER_SSH_DIR"
       - "$HOST_GH_CONFIG_DIR:$CONTAINER_GH_CONFIG_DIR"
       - "$HOST_PASSAGE_DIR:$CONTAINER_PASSAGE_DIR"
+      - "/tmp/.X11-unix:/tmp/.X11-unix"
     deploy:
       resources:
         reservations:
