--- a/.docker/Dockerfile.foxy
+++ b/.docker/Dockerfile.foxy
@@ -77,6 +77,7 @@ COPY ./.docker/scripts /home/$USERNAME/scripts/
 
 # Add the ROS2 setup.bash to the bashrc
 RUN echo "source /opt/ros/foxy/setup.bash" >> ~/.bashrc
+USER root
 
 # Specifies the command that will be executed when the container is run
 CMD ["bash"]
