feat(docker): add LATEST_IMAGE_TAG to foxy and foxy-dsr environments

--- a/.docker/docker.foxy-dsr.env
+++ b/.docker/docker.foxy-dsr.env
@@ -14,6 +14,7 @@ APP_DIRNAME=${ROS2_DIRNAME:-"ros_ws"}                         # The directory na
 # docker build: Configuration parameters for building the Docker image
 IMAGE_VARIANT=${IMAGE_VARIANT:-"foxy-dsr"}                                   # The variant of the Docker image.
 IMAGE_TAG="${IMAGE_VERSION}-${IMAGE_VARIANT}"                                # The tag of the Docker image
+LATEST_IMAGE_TAG="latest-${IMAGE_VARIANT}"                                # The tag of the Docker image
 IMAGE_NAME="${CONTAINER_REGISTRY}/${DOCKER_USERNAME}/${DOCKER_PROJECT_NAME}" # The full name of the Docker image
 BUILD_FROM="ghcr.io/entelecheia/ros2:latest-foxy"                            # The base image for the Docker build
 
