--- a/.docker/docker.foxy.env
+++ b/.docker/docker.foxy.env
@@ -13,6 +13,7 @@ CONTAINER_USER_EMAIL=${USER_EMAIL:-"entelecheia@hotmail.com"}                   
 # docker build: Configuration parameters for building the Docker image
 IMAGE_VARIANT=${IMAGE_VARIANT:-"foxy"}          # The variant of the Docker image.
 IMAGE_TAG="${IMAGE_VERSION}-${IMAGE_VARIANT}"                                # The tag of the Docker image
+LATEST_IMAGE_TAG="latest-${IMAGE_VARIANT}"                                # The tag of the Docker image
 IMAGE_NAME="${CONTAINER_REGISTRY}/${DOCKER_USERNAME}/${DOCKER_PROJECT_NAME}" # The full name of the Docker image
 BUILD_FROM="ghcr.io/entelecheia/devcon:latest-ubuntu-20.04"                                       # The base image for the Docker build
 
