--- a/.github/workflows/deploy-foxy-dsr-image.yaml
+++ b/.github/workflows/deploy-foxy-dsr-image.yaml
@@ -5,12 +5,19 @@ name: deploy-foxy-dsr-image
 on:
   workflow_call:
   workflow_dispatch:
-  push:
+  workflow_run:
+    workflows:
+      - deploy-foxy-image
     branches:
-      - docker*
-    paths:
-      - ".docker/**/*.foxy-dsr*"
-      - ".docker/docker.version"
+      - release
+    types:
+      - completed
+  # push:
+  #   branches:
+  #     - docker*
+  #   paths:
+  #     - ".docker/**/*.foxy-dsr*"
+  #     - ".docker/docker.version"
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
@@ -19,6 +26,8 @@ env:
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
   build-and-push-image:
+    # check if the workflow result is success
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
