fix(docker): add DISPLAY variable definition

--- a/.docker/docker.common.env
+++ b/.docker/docker.common.env
@@ -8,6 +8,7 @@ APP_SRC_DIR=${APP_INSTALL_ROOT}/${APP_DIRNAME}
 APP_VIRTUAL_ENV=${APP_INSTALL_ROOT}/.venvs/${APP_DIRNAME}
 APP_WORKSPACE_ROOT=${APP_INSTALL_ROOT}/workspace
 APP_HF_HOME="${APP_INSTALL_ROOT}/.cache/huggingface"                                    # HuggingFace models cache directory
+DISPLAY="$(cat /etc/resolv.conf | grep nameserver | awk '{print $2}'):0"
 
 #######################################################################################
 # Host machine environment variables                                                  #
