chore: Update submodule paths in .gitmodules file

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "doosan-robot2"]
-	path = doosan-robot2
+	path = src/doosan-robot2
 	url = https://github.com/doosan-robotics/doosan-robot2
+[submodule "src/ros2_control"]
+	path = src/ros2_control
+	url = https://github.com/ros-controls/ros2_control.git
+[submodule "src/ros2_controllers"]
+	path = src/ros2_controllers
+	url = https://github.com/ros-controls/ros2_controllers.git
+[submodule "gazebo_ros2_control"]
+	path = src/gazebo_ros2_control
+	url = https://github.com/ros-simulation/gazebo_ros2_control.git
