chore: Update Dockerfile to build ROS workspace and include necessary ROS2 packages
This commit updates the Dockerfile to build the ROS workspace and includes the necessary ROS2 packages: doosan-robot2, ros2_control, ros2_controllers, gazebo_ros2_control, and moveit_msgs. It also updates the build script to use the correct command for building the ROS workspace. Additionally, the fake_joint package is added for compatibility with our ROS2 package.

--- a/.docker/docker.foxy-dsr.env
+++ b/.docker/docker.foxy-dsr.env
@@ -29,3 +29,4 @@ CONTAINER_JUPYTER_TOKEN=${ROS2_JUPYTER_TOKEN:-"__juypter_token_(change_me)__"}  
 CONTAINER_SERVICE_NAME=${ROS2_SERVICE_NAME:-"app"}           # The server name (optional, can be left empty)
 CONTAINER_WEB_SVC_PORT=${WEB_SVC_PORT:-"8080"}                                # The Web service port in the Docker container
 HOST_WEB_SVC_PORT=${ROS2_HOST_WEB_SVC_PORT-"19030"} # The Web service port on the host machine to be mapped to the container's Web service port
+APP_WORKSPACE_ROOT="${CONTAINER_HOME}/${APP_DIRNAME}"    
