--- a/.docker/docker.common.env
+++ b/.docker/docker.common.env
@@ -19,7 +19,7 @@ SSH_PUB_KEY=${SSH_PUB_KEY:-""}
 
 HOST_WORKSPACE_LOCATION=${HOST_WORKSPACE_LOCATION:-"$PWD/workspace/$PROJECT_ID"}
 HOST_WORKSPACE_ROOT=${HOST_WORKSPACE_ROOT:-"$HOST_WORKSPACE_LOCATION/workspace"}
-HOST_SCRIPTS_DIR=${HOST_SCRIPTS_DIR:-"$HOST_WORKSPACE_ROOT/scripts"}
+HOST_SCRIPTS_DIR=${HOST_SCRIPTS_DIR:-"$PWD/.docker/scripts"}
 HOST_SSH_DIR=${HOST_SSH_DIR:-"$HOST_WORKSPACE_LOCATION/.ssh"}
 HOST_CACHE_DIR=${HOST_CACHE_DIR:-"$HOST_WORKSPACE_LOCATION/.cache"}
 HOST_HF_HOME=${HOST_HF_HOME:-"$HOST_CACHE_DIR/huggingface"}
