--- a/.docker/Dockerfile.foxy-dsr
+++ b/.docker/Dockerfile.foxy-dsr
@@ -58,15 +58,15 @@ RUN mkdir -p "$APP_DIRNAME/src"
 # Copies scripts from host into the image
 COPY ./.docker/scripts /home/$USERNAME/scripts/
 # This script is used to install additional dependencies for the ROS2 workspace.
-RUN cd "$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-ros-repos.sh"
+RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-ros-repos.sh"
 # This script is used to reset the submodules in the repo to specific commits. 
-RUN cd "$APP_DIRNAME" && bash "/home/$USERNAME/scripts/reset-submodule.sh"
+RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/reset-submodule.sh"
 # This script is used to build the ROS2 workspace.
 RUN bash "/home/$USERNAME/scripts/build-ros_ws.sh"
 # Clone MoveIt repos
-RUN cd "$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-moveit-repos.sh"
+RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-moveit-repos.sh"
 # Build MoveIt
-RUN cd "$APP_DIRNAME" && bash "/home/$USERNAME/scripts/build-moveit.sh"
+RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/build-moveit.sh"
 # Source the ROS2 workspace setup
 RUN echo "source /home/$USERNAME/$APP_DIRNAME/install/setup.bash" >> ~/.bashrc
 
