--- a/.docker/Dockerfile.foxy-dsr
+++ b/.docker/Dockerfile.foxy-dsr
@@ -52,21 +52,8 @@ RUN mkdir -p "$APP_SRC_DIR/src"
 RUN chown --recursive $USER_UID:$USER_UID $WORKSPACE_ROOT
 # RUN chown --recursive $USER_UID:$USER_UID $APP_INSTALL_ROOT
 
-USER $USERNAME
-WORKDIR /home/$USERNAME
-RUN mkdir -p "$APP_DIRNAME/src" 
-# Copies scripts from host into the image
-COPY ./.docker/scripts /home/$USERNAME/scripts/
-# This script is used to install additional dependencies for the ROS2 workspace.
-RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-ros-repos.sh"
-# This script is used to reset the submodules in the repo to specific commits. 
-RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/reset-submodule.sh"
-# This script is used to build the ROS2 workspace.
-RUN bash "/home/$USERNAME/scripts/build-ros_ws.sh"
-# Clone MoveIt repos
-RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-moveit-repos.sh"
 # Install additional MoveIt dependencies
-RUN sudo -H apt-get install -y python-lxml libomp-dev libmongoclient-dev mongodb \
+RUN apt-get install -y python-lxml libomp-dev libmongoclient-dev mongodb \
         ros-foxy-moveit-resources-panda-description \
         ros-foxy-eigen-stl-containers \
         ros-foxy-octomap \
@@ -80,8 +67,22 @@ RUN sudo -H apt-get install -y python-lxml libomp-dev libmongoclient-dev mongodb
         ros-foxy-ompl ros-foxy-urdfdom-py \
         ros-foxy-gripper-controllers \
         ros-foxy-joint-state-broadcaster
+
+USER $USERNAME
+WORKDIR /home/$USERNAME
+RUN mkdir -p "$APP_DIRNAME/src" 
+# Copies scripts from host into the image
+COPY ./.docker/scripts /home/$USERNAME/scripts/
+# This script is used to install additional dependencies for the ROS2 workspace.
+RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-ros-repos.sh"
+# This script is used to reset the submodules in the repo to specific commits. 
+RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/reset-submodule.sh"
+# This script is used to build the ROS2 workspace.
+RUN bash "/home/$USERNAME/scripts/build-ros_ws.sh"
+# Clone MoveIt repos
+RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-moveit-repos.sh"
 # Build MoveIt
-# RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/build-moveit.sh"
+RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/build-moveit.sh"
 # Source the ROS2 workspace setup
 RUN echo "source /home/$USERNAME/$APP_DIRNAME/install/setup.bash" >> ~/.bashrc
 
