chore: Update Dockerfile to include necessary ROS2 packages and reset submodules

--- a/.docker/docker.common.env
+++ b/.docker/docker.common.env
@@ -9,6 +9,7 @@ APP_VIRTUAL_ENV=${APP_INSTALL_ROOT}/.venvs/${APP_DIRNAME}
 APP_WORKSPACE_ROOT=${APP_INSTALL_ROOT}/workspace
 APP_HF_HOME="${APP_INSTALL_ROOT}/.cache/huggingface"                                    # HuggingFace models cache directory
 DISPLAY="$(cat /etc/resolv.conf | grep nameserver | awk '{print $2}'):0"
+CMAKE_VERSION=${CMAKE_VERSION:-"3.29.3"}                      # The version of CMake to install
 
 #######################################################################################
 # Host machine environment variables                                                  #
