--- a/.docker/Dockerfile.foxy
+++ b/.docker/Dockerfile.foxy
@@ -14,11 +14,31 @@ RUN add-apt-repository universe
 RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
 RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
 RUN apt update --fix-missing \
-    && apt-get install -y ros-foxy-desktop python3-argcomplete ros-foxy-ros-base python3-argcomplete \
-        ros-dev-tools libpoco-dev ros-foxy-control-msgs ros-foxy-realtime-tools \
-        ros-foxy-xacro ros-foxy-joint-state-publisher-gui ros-foxy-object-recognition-msgs \
-        ros-foxy-octomap-msgs ros-foxy-gazebo-ros ros-foxy-gazebo-ros-pkgs ros-foxy-control-toolbox \
-    # Cleans up unnecessary packages to reduce image size
+    && apt-get install -y \
+        python3-argcomplete python-lxml \
+        libpoco-dev libomp-dev libmongoclient-dev mongodb \
+        ros-foxy-desktop ros-foxy-ros-base \
+        ros-dev-tools ros-foxy-realtime-tools \
+        ros-foxy-xacro \
+        ros-foxy-object-recognition-msgs \
+        ros-foxy-control-msgs ros-foxy-control-toolbox \
+        ros-foxy-octomap \
+        ros-foxy-octomap-msgs \
+        ros-foxy-gazebo-ros ros-foxy-gazebo-ros-pkgs \
+        ros-foxy-eigen-stl-containers \
+        ros-foxy-random-numbers \
+        ros-foxy-moveit-resources-panda-description \
+        ros-foxy-moveit-resources-panda-moveit-config \
+        ros-foxy-moveit-resources-fanuc-description \
+        ros-foxy-moveit-resources-fanuc-moveit-config \
+        ros-foxy-moveit-resources-pr2-description \
+        ros-foxy-ros-testing \
+        ros-foxy-pybind11-vendor \
+        ros-foxy-ompl ros-foxy-urdfdom-py \
+        ros-foxy-gripper-controllers \
+        ros-foxy-joint-state-publisher-gui \
+        ros-foxy-joint-state-broadcaster \
+        # Cleans up unnecessary packages to reduce image size
     && apt-get autoremove -y \
     && apt-get clean -y
 
@@ -73,7 +93,11 @@ USER $USERNAME
 RUN ln -s "$APP_SRC_DIR" "/home/$USERNAME/$APP_DIRNAME" 
 # Copies scripts from host into the image
 COPY ./.docker/scripts /home/$USERNAME/scripts/
-
+# Install the latest version of CMake
+ARG ARG_CMAKE_VERSION="3.29.3"
+ENV CMAKE_VERSION=$ARG_CMAKE_VERSION
+RUN bash "/home/$USERNAME/scripts/install-cmake.sh"
+ENV PATH="/opt/cmake-${CMAKE_VERSION}/bin:$PATH"
 # Add the ROS2 setup.bash to the bashrc
 RUN echo "source /opt/ros/foxy/setup.bash" >> ~/.bashrc
 
