chore: Update Docker Compose files to include CMake version argument
The Docker Compose files (.docker/docker-compose.foxy-dsr.yaml and .docker/docker-compose.foxy.yaml) have been updated to include the ARG_CMAKE_VERSION argument. This argument allows for specifying the CMake version to be used in the container. This change ensures consistency and flexibility in the CMake version used across different environments.

--- a/.docker/docker-compose.foxy-dsr.yaml
+++ b/.docker/docker-compose.foxy-dsr.yaml
@@ -22,6 +22,7 @@ services:
         ARG_APP_INSTALL_ROOT: $APP_INSTALL_ROOT
         ARG_APP_DIRNAME: $APP_DIRNAME
         ARG_CONTAINER_SERVICE_NAME: $CONTAINER_SERVICE_NAME
+        ARG_CMAKE_VERSION: $CMAKE_VERSION
     # Sets the image name for the built image
     image: $IMAGE_NAME:$IMAGE_TAG
     # Sets the hostname of the container
