--- a/.docker/Dockerfile.foxy-dsr
+++ b/.docker/Dockerfile.foxy-dsr
@@ -52,22 +52,6 @@ RUN mkdir -p "$APP_SRC_DIR/src"
 RUN chown --recursive $USER_UID:$USER_UID $WORKSPACE_ROOT
 # RUN chown --recursive $USER_UID:$USER_UID $APP_INSTALL_ROOT
 
-# Install additional MoveIt dependencies
-RUN apt-get install -y python-lxml libomp-dev libmongoclient-dev mongodb \
-        ros-foxy-moveit-resources-panda-description \
-        ros-foxy-eigen-stl-containers \
-        ros-foxy-octomap \
-        ros-foxy-random-numbers \
-        ros-foxy-moveit-resources-panda-moveit-config \
-        ros-foxy-moveit-resources-fanuc-description \
-        ros-foxy-moveit-resources-fanuc-moveit-config \
-        ros-foxy-ros-testing \
-        ros-foxy-pybind11-vendor \
-        ros-foxy-moveit-resources-pr2-description \
-        ros-foxy-ompl ros-foxy-urdfdom-py \
-        ros-foxy-gripper-controllers \
-        ros-foxy-joint-state-broadcaster
-
 USER $USERNAME
 WORKDIR /home/$USERNAME
 RUN mkdir -p "$APP_DIRNAME/src" 
@@ -82,7 +66,7 @@ RUN bash "/home/$USERNAME/scripts/build-ros_ws.sh"
 # Clone MoveIt repos
 RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/clone-moveit-repos.sh"
 # Build MoveIt
-RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/build-moveit.sh"
+# RUN cd "/home/$USERNAME/$APP_DIRNAME" && bash "/home/$USERNAME/scripts/build-moveit.sh"
 # Source the ROS2 workspace setup
 RUN echo "source /home/$USERNAME/$APP_DIRNAME/install/setup.bash" >> ~/.bashrc
 
