--- a/.docker/Dockerfile.foxy-dsr
+++ b/.docker/Dockerfile.foxy-dsr
@@ -17,8 +17,6 @@ ENV PATH="$APP_VIRTUAL_ENV/bin:$PATH"
 ENV APP_WORKSPACE_ROOT=${APP_INSTALL_ROOT}/workspace
 ARG ARG_WORKSPACE_ROOT="/workspace"
 ENV WORKSPACE_ROOT $ARG_WORKSPACE_ROOT
-# Sets up the workspace for the user
-RUN mkdir -p $WORKSPACE_ROOT/projects
 
 # Setting ARGs and ENVs for user creation and workspace setup
 ARG ARG_USERNAME="app"
@@ -30,19 +28,17 @@ ENV USER_GID $ARG_USER_GID
 
 USER root
 # Creates a non-root user with sudo privileges
-# check if user exists and if not, create user
-RUN if id -u $USERNAME >/dev/null 2>&1; then \
-        # if the current user's user id is different from the specified user id, change the user id of the current user to the specified user id
+# Check if user exists and if not, create user
+RUN set -eux; \
+    if id -u $USERNAME >/dev/null 2>&1; then \
+        # If the current user's user ID is different from the specified user ID, change the user ID of the current user to the specified user ID
         if [ "$USER_UID" -ne "$(id -u $USERNAME)" ]; then \
             usermod --uid $USER_UID $USERNAME; \
         fi; \
     else \
-        groupadd --gid $USER_GID $USERNAME && \
-        adduser --uid $USER_UID --gid $USER_GID --force-badname --disabled-password --gecos "" $USERNAME && \
-        echo "$USERNAME:$USERNAME" | chpasswd && \
-        adduser $USERNAME sudo && \
-        echo "$USERNAME ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers && \
-        echo "$USERNAME ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/$USERNAME && \
+        useradd --uid $USER_UID --create-home --shell /bin/bash --groups sudo $USERNAME; \
+        echo "$USERNAME:$USERNAME" | chpasswd; \
+        echo "$USERNAME ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/$USERNAME; \
         chmod 0440 /etc/sudoers.d/$USERNAME; \
     fi
 
