refactor: Update Dockerfile to include script for installing CMake version 3.29.3

--- a/.docker/Dockerfile.foxy
+++ b/.docker/Dockerfile.foxy
@@ -55,17 +55,16 @@ ENV APP_DIRNAME $ARG_APP_DIRNAME
 ENV APP_SRC_DIR=${APP_INSTALL_ROOT}/${APP_DIRNAME}
 ENV APP_VIRTUAL_ENV=${APP_INSTALL_ROOT}/.venvs/${APP_DIRNAME}
 ENV PATH="$APP_VIRTUAL_ENV/bin:$PATH"
-ENV APP_WORKSPACE_ROOT=${APP_INSTALL_ROOT}/workspace
-ARG ARG_WORKSPACE_ROOT="/workspace"
+ENV AARG ARG_WORKSPACE_ROOT="/workspace"
 ENV WORKSPACE_ROOT $ARG_WORKSPACE_ROOT
 
 # Copies scripts from host into the image
-RUN mkdir -p "$APP_WORKSPACE_ROOT/scripts"
-COPY ./.docker/scripts/install-cmake.sh "$APP_WORKSPACE_ROOT/scripts/install-cmake.sh"
+RUN mkdir -p "$APP_INSTALL_ROOT/scripts"
+COPY ./.docker/scripts/install-cmake.sh "$APP_INSTALL_ROOT/scripts/install-cmake.sh"
 # Install the latest version of CMake
 ARG ARG_CMAKE_VERSION="3.29.3"
 ENV CMAKE_VERSION=$ARG_CMAKE_VERSION
-RUN bash "$APP_WORKSPACE_ROOT/scripts/install-cmake.sh"
+RUN bash "$APP_INSTALL_ROOT/scripts/install-cmake.sh"
 ENV PATH="/opt/cmake-${CMAKE_VERSION}/bin:$PATH"
 
 # Setting ARGs and ENVs for user creation and workspace setup
