--- a/.copier-docker-config.foxy-dsr.yaml
+++ b/.copier-docker-config.foxy-dsr.yaml
@@ -12,7 +12,7 @@ cuda_device_id: all
 docker_apt_packages: ''
 docker_build_from: ghcr.io/entelecheia/ros2:latest-foxy
 docker_container_uid: 8001
-docker_container_username: app
+docker_container_username: dev
 docker_image_variant_name: foxy-dsr
 docker_image_version_variable_name: IMAGE_VERSION
 docker_name_prefix: ROS2
