--- a/.docker/Dockerfile.foxy
+++ b/.docker/Dockerfile.foxy
@@ -62,13 +62,13 @@ ENV WORKSPACE_ROOT $ARG_WORKSPACE_ROOT
 RUN mkdir -p "$APP_INSTALL_ROOT/scripts"
 COPY ./.docker/scripts/install-cmake.sh "$APP_INSTALL_ROOT/scripts/install-cmake.sh"
 # Install the latest version of CMake
-ARG ARG_CMAKE_VERSION="3.29.3"
+ARG ARG_CMAKE_VERSION="3.23.2"
 ENV CMAKE_VERSION=$ARG_CMAKE_VERSION
 RUN bash "$APP_INSTALL_ROOT/scripts/install-cmake.sh"
 ENV PATH="/opt/cmake-${CMAKE_VERSION}/bin:$PATH"
 
 # Setting ARGs and ENVs for user creation and workspace setup
-ARG ARG_USERNAME="app"
+ARG ARG_USERNAME="dev"
 ARG ARG_USER_UID=8001
 ENV USERNAME $ARG_USERNAME
 ENV USER_UID $ARG_USER_UID
