--- a/.docker/docker.common.env
+++ b/.docker/docker.common.env
@@ -35,7 +35,7 @@ DOCKER_PROJECT_ID=${DOCKER_PROJECT_ID:-"default"}                               
 DOCKER_USERNAME=${DOCKER_USERNAME:-"entelecheia"}                            # The username for Docker.
 IMAGE_VERSION=${IMAGE_VERSION:-"1.0.0"}                     # The version of the Docker image. If not set, "1.0.0" will be used.
 CONTAINER_REGISTRY=${CONTAINER_REGISTRY:-"ghcr.io"}                      # The Docker registry to push the image to.
-CONTAINER_USERNAME="app"                                   # The username of the user. If not set, the current user's username will be used.
+CONTAINER_USERNAME="dev"                                   # The username of the user. If not set, the current user's username will be used.
 CONTAINER_USER_UID=${USER_UID:-"8001"}                           # The user ID in the Docker container.
 CONTAINER_USER_GID=${USER_GID:-"8001"}                           # The group ID in the Docker container.
 CONTAINER_GITHUB_USERNAME=${GITHUB_USERNAME:-"entelecheia"}                  # The GitHub username of the project
