--- a/.docker/Dockerfile.foxy
+++ b/.docker/Dockerfile.foxy
@@ -70,8 +70,10 @@ ENV PATH="/opt/cmake-${CMAKE_VERSION}/bin:$PATH"
 # Setting ARGs and ENVs for user creation and workspace setup
 ARG ARG_USERNAME="dev"
 ARG ARG_USER_UID=8001
+ARG ARG_USER_GID=$ARG_USER_UID
 ENV USERNAME $ARG_USERNAME
 ENV USER_UID $ARG_USER_UID
+ENV USER_GID $ARG_USER_GID
 
 # Creates a non-root user with sudo privileges
 # Check if user exists and if not, create user
