--- a/.docker/docker.humble.env
+++ b/.docker/docker.humble.env
@@ -11,14 +11,14 @@ CONTAINER_USER_EMAIL=${USER_EMAIL:-"entelecheia@hotmail.com"}                   
 # change the variables above to your need                                             #
 #######################################################################################
 # docker build: Configuration parameters for building the Docker image
-IMAGE_VARIANT=${IMAGE_VARIANT:-"foxy"}          # The variant of the Docker image.
+IMAGE_VARIANT=${IMAGE_VARIANT:-"humble"}          # The variant of the Docker image.
 IMAGE_TAG="${IMAGE_VERSION}-${IMAGE_VARIANT}"                                # The tag of the Docker image
 LATEST_IMAGE_TAG="latest-${IMAGE_VARIANT}"                                # The tag of the Docker image
 IMAGE_NAME="${CONTAINER_REGISTRY}/${DOCKER_USERNAME}/${DOCKER_PROJECT_NAME}" # The full name of the Docker image
-BUILD_FROM="ghcr.io/entelecheia/devcon:latest-ubuntu-20.04"                                       # The base image for the Docker build
+BUILD_FROM="ghcr.io/entelecheia/devcon:latest-ubuntu-22.04"                                       # The base image for the Docker build
 
 # docker run: Configuration parameters for running the Docker container
-CONTAINER_LAUNCH_SCRIPT="${CONTAINER_WORKSPACE_ROOT}/scripts/launch-ros-foxy.sh"              # The name of the launch script
+CONTAINER_LAUNCH_SCRIPT="${CONTAINER_WORKSPACE_ROOT}/scripts/launch-ros-humble.sh"              # The name of the launch script
 CONTAINER_CUDA_DEVICE_ID=${ROS2_CUDA_DEVICE_ID:-"all"}   # The ID of the CUDA device to use, e.g. all, 0, 1, 2, etc.
 CONTAINER_SSH_PORT=${SSH_PORT:-"22"}                                                # The SSH port in the Docker container
 HOST_SSH_PORT=${ROS2_HOST_SSH_PORT:-"29329"}                # The SSH port on the host machine to be mapped to the container's SSH port
