--- a/.github/workflows/deploy-humble-dsr-image.yaml
+++ b/.github/workflows/deploy-humble-dsr-image.yaml
@@ -1,5 +1,5 @@
 #
-name: deploy-foxy-dsr-image
+name: deploy-humble-dsr-image
 
 # Configures this workflow to run every time a change is pushed to the branch called `release`.
 on:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows:
-      - deploy-foxy-image
+      - deploy-humble-image
     branches:
       - docker*
     types:
@@ -16,7 +16,7 @@ on:
   #   branches:
   #     - docker*
   #   paths:
-  #     - ".docker/**/*.foxy-dsr*"
+  #     - ".docker/**/*.humble-dsr*"
   #     - ".docker/docker.version"
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
@@ -56,7 +56,7 @@ jobs:
         uses: c-py/action-dotenv-to-setenv@v5
         with:
           # use branch name as suffix for dotfile
-          env-file: ./.docker/docker.foxy-dsr.env
+          env-file: ./.docker/docker.humble-dsr.env
 
         # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
       - name: Log in to the Container registry
@@ -85,7 +85,7 @@ jobs:
         uses: docker/build-push-action@v5.3.0
         with:
           context: .
-          file: ./.docker/Dockerfile.foxy-dsr
+          file: ./.docker/Dockerfile.humble-dsr
           build-args: |
             ARG_USERNAME=${{ env.CONTAINER_USERNAME }}
             ARG_USER_UID=${{ env.CONTAINER_USER_UID }}
